fixed spacing with top nav

--- a/admin_bootstrap3/static/admin/less/bootstrap_admin.less
+++ b/admin_bootstrap3/static/admin/less/bootstrap_admin.less
@@ -1,2 +1,4 @@
 @import "forms";
 @import "chosen";
+
+body { padding-top: 70px; }
